--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta property="og:title" content="+5 cm dalam 12 hari">
 <meta property="og:description" content="informasi lebih lanjut di situs">
-<meta property="og:image" content=https://i.ibb.co/pzqv826/5-cm-dalam-12-hari-11.png">
+<meta property="og:image" content="https://i.ibb.co/pzqv826/5-cm-dalam-12-hari-11.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
